# magcoordpy

./: .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-deploy.yml  python-package.yml  python-test-main.yml  python-test.yml
docs/: requirements.txt
docs/source/: conf.py  coord_transforms.rst  functions.rst  index.rst  ort_mag_coo_sys.rst
src/magcoordpy/: constants.py  coord_transforms.py  helpers.py  igrf_coeffs.py
tests/: test_coords.py
