[tool.poetry]
name = "magcoordpy"
version = "0.1.0"
description = "A python package for working with magnetic coordinate transformations"
authors = ["Giorgio Savastano <giorgio.savastano@uniroma1.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
