[tool.poetry]
name = "magcoordpy"
version = "0.1.0"
description = "A python package for working with magnetic coordinate transformations"
authors = ["Giorgio Savastano <giorgio.savastano@uniroma1.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.2"
pymap3d = "^2.7.2"
urllib3 = "^1.26.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.2"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
zarr = "^2.11.0"
s3fs = "^2022.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
