[tool.poetry]
name = "magcoordpy"
version = "0.1.14"
description = "A python package for working with magnetic coordinate transformations"
authors = ["Giorgio Savastano <giorgio.savastano@uniroma1.it>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
pymap3d = "^2.7.2"
urllib3 = "^1.26.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
coverage = "^6.3.2"
pre-commit = "^2.17.0"
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
zarr = "^2.11.0"
s3fs = "^2022.2.0"
pytest-cov = "^3.0.0"
numpydoc = "^1.2"

[tool.poetry.extras]
docs = ['sphinx']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths=[
    "tests"
]
markers =[
    "unit: Unit tests.",
]
